# XML-Parser

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Globals.cpp  Globals.h  main.cpp
src/Base Classes/Array/: Array.cpp  Array.h  Array.tpp
src/Base Classes/String/: String.cpp  String.h
src/Console/: Console.cpp  Console.h
src/Data Structures/Array/: List.h  List.tpp
src/Data Structures/List/: List.h
src/Data Structures/Pair/: Pair.h
src/Data Structures/String/: String.cpp  String.h
src/Data Structures/Tree/: TreeNode.cpp  TreeNode.h
src/Dispatcher/: Dispatcher.cpp  Dispatcher.h
src/Dispatcher/Command/: Command.cpp  Command.h
src/FileManager/: FileManager.cpp  FileManager.h
src/FileManager/File/: File.cpp  File.h
src/Interfaces/: Pair.h  Stringifiable.h  Stringifyable.h
src/Node/: Node.cpp  Node.h
src/Node/Argument/: Argument.cpp  Argument.h
src/Node/Id/: Id.cpp  Id.h
src/Parser/: Parser.cpp  Parser.h
src/String/: String.cpp  String.h
src/Utils/: Exception.h  Globals.h
src/XML Tree/: XML_Node.cpp  XML_Node.h
src/XML Tree/Argument/: Argument.cpp  Argument.h
src/XPath/: XPath.cpp  XPath.h
